# lsif-lang-server

./: Cargo.toml  Makefile  README.md  rustfmt.toml
lua/: lib_lsp.lua  run_some_tests.lua  vim_utils.lua
src/: lib.rs  types.rs
src/reader/: deserialize.rs  interner.rs  mod.rs  reader.rs  types.rs
src/server/: main.rs
tests/functional/: request_spec.lua
