[package]
name = "lsif-protocol"
version = "0.1.0"
authors = ["Noah Santschi-Cooney <noah@santschi-cooney.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json =  { version = "1.0.59", features = ["raw_value"] }
serde = "1.0.117"
lsp-types = "0.83.0"
anyhow = "1.0.33"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
crossbeam-channel = "0.5.0"
rayon = "1.5.0"
thiserror = "1.0.22"